ExitModal + Fix Bug

--- a/public/index.html
+++ b/public/index.html
@@ -11,19 +11,16 @@
     />
 
 	<style>
-		body {
+
+		/* body {
 			margin: 0;
 			padding: 0;
 			background-color: #ffffff;
 		}
     #canvasArea {
-        margin-left: auto;
-        margin-right: auto;
-        overflow: hidden;
-        width: fit-content;
-        height: fit-content;
         left: 5%;
-    }
+        top: 0
+    } */
 
         
 	</style>
